<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The People\'s Kitchen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notmember">Not a member?</string>
    <string name="signup">SignUp</string>
    <string name="title_activity_recipes">RecipesActivity</string>
    <string name="search">Search</string>
    <string name="search_key">Search recipe or ingredient</string>
    <string name="trending">See Trending Recipes</string>
    <string name="logout">Logout</string>
    <string name="toprated">See Top Rated Recipes</string>
    <string name="title_activity_recipes_list">RecipesListActivity</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="view">View Ingredients</string>
    <string name="share">"Share Recipe "</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="btnSignInSubmit">Submit</string>
    <string name="btnCancel">Cancel</string>
    <string name="Name">Name</string>
    <string name="Email">Email Address</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="TextEditPassword">Password : </string>
    <string name="textEditConfirmPassword">Confirm Password :</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="TextViewSignUpUsername">Username :</string>
    <string name="SignUpUsername">Username</string>
    <string name="reset">Reset Fields</string>
    <string name="Menu_signOut">Sign out</string>
    <string name="email">"Email "</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="enteru">Enter Username</string>
    <string name="enterp">Enter Password</string>
    <string name="ingredients">INGREDIENTS USED</string>
    <string name="viewRecipe">View Complete Recipe</string>
    <string name="title_activity_sms">SMSActivity</string>
    <string name="entermobile">Enter Mobile Number</string>
    <string name="additional">Additinal Message</string>
    <string name="mobile">Enter Mobile Number</string>
    <string name="addmsg">Aditional Message</string>
    <string name="sort1">Trending Recipes</string>
    <string name="sort2">Top Rated Recipes</string>
    <string name="seemore">See More</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="sendmsg">Send Message</string>
    <string name="title_activity_final">FinalActivity</string>
    <string name="developers">About the Developers</string>
    <string name="title_activity_favourites">FavouritesActivity</string>

</resources>