<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thepeopleskitchen.MainActivity" >

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ingtextview"
        android:layout_alignLeft="@+id/password"
        android:ems="10"
        android:hint="@string/enteru" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_toRightOf="@+id/ingtextview"
        android:ems="10"
        android:hint="@string/enterp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ingtextview"
        android:layout_below="@+id/ingtextview"
        android:layout_marginTop="26dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo1" />

    <Button
        android:id="@+id/viewbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newuserbtn"
        android:layout_below="@+id/password"
        android:text="@string/login"
        android:textStyle="bold" />

    <Button
        android:id="@+id/resetbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewbtn"
        android:layout_below="@+id/viewbtn"
        android:text="@string/reset"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ingtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewbtn"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="27dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newuserbtn"
        android:layout_alignLeft="@+id/password"
        android:text="@string/notmember"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/newuserbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/signup"
        android:textStyle="bold" />

</RelativeLayout>
