<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thepeopleskitchen.RecipesActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo1" />

    <Button
        android:id="@+id/newuserbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:text="@string/trending"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewbtn"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/search_key" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/viewbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newuserbtn"
        android:layout_below="@+id/username"
        android:text="@string/search"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ratedbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newuserbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/toprated"
        android:textStyle="bold" />

</RelativeLayout>
